--- a/src/main/resources/assets/nipeswords/lang/en_us.json
+++ b/src/main/resources/assets/nipeswords/lang/en_us.json
@@ -4,7 +4,7 @@
   "item.nipeswords.nipes_sword": "Nipes Sword",
   "item.nipeswords.nipes_hoe": "Nipes Hoe",
   "item.nipeswords.moneys": "Money",
-  "item.nipeswords.meth": "Weed Crack",
+  "item.nipeswords.meth": "Crystal Meth",
   "item.nipeswords.burger_spawn_egg": "Burger Spawn Egg",
   "item.nipeswords.skibidi_spawn_egg": "Skibidi Spawn Egg",
   "block.nipeswords.nipes_block": "Block of Nipes",
