added creative mode tab translation

--- a/src/main/resources/assets/nipeswords/lang/en_us.json
+++ b/src/main/resources/assets/nipeswords/lang/en_us.json
@@ -17,5 +17,6 @@
   "sounds.nipeswords.skibidi_death": "toilet flushing ",
   "sounds.nipeswords.skibidi_hurt": "skibidi hurt",
   "sounds.nipeswords.skibidi_ambient": "skibidi dop dop yes ",
-  "sounds.nipeswords.dealer_trade": "damn druggie"
+  "sounds.nipeswords.dealer_trade": "damn druggie",
+  "creativetab.nipes_tab": "Nipes Tab"
 }
