--- a/src/main/resources/assets/nipeswords/lang/en_us.json
+++ b/src/main/resources/assets/nipeswords/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.nipeswords.nipes": "Nipes",
   "item.nipeswords.raw_nipes": "Raw Nipes",
   "item.nipeswords.nipes_sword": "Nipes Sword",
+  "item.nipeswords.nipes_shield": "Nipes Shield",
   "item.nipeswords.nipes_hoe": "Nipes Hoe",
   "item.nipeswords.moneys": "Money",
   "item.nipeswords.meth": "Crystal Meth",
